[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/PlayButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/ButtonUpgrades.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/ButtonHighscores.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/ButtonSkins.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/ButtonShop.png" type="Texture" id=6]
[ext_resource path="res://Assets/Overlays/MenuStatsMonitor.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Scripts/Label.gd" type="Script" id=8]

[node name="Node2D" type="Node2D"]

[node name="MainMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="PlayButton" type="TextureButton" parent="MainMenu"]
anchor_right = 0.39
margin_left = 50.0
margin_top = 18.0
margin_right = 98.4
margin_bottom = 50.0
texture_normal = ExtResource( 2 )

[node name="UpgradeMenuButton" type="TextureButton" parent="MainMenu"]
margin_left = 1.0
margin_top = 1.0
margin_right = 33.0
margin_bottom = 33.0
texture_normal = ExtResource( 3 )

[node name="HighscoreMenuButton" type="TextureButton" parent="MainMenu"]
margin_left = 127.0
margin_top = 1.0
margin_right = 159.0
margin_bottom = 33.0
texture_normal = ExtResource( 4 )

[node name="SkinMenuButton" type="TextureButton" parent="MainMenu"]
margin_left = 1.0
margin_top = 36.0
margin_right = 33.0
margin_bottom = 68.0
texture_normal = ExtResource( 5 )

[node name="ShopMenuButton" type="TextureButton" parent="MainMenu"]
margin_left = 127.0
margin_top = 36.0
margin_right = 159.0
margin_bottom = 68.0
texture_normal = ExtResource( 6 )

[node name="MenuStatsMonitor" parent="MainMenu" instance=ExtResource( 7 )]

[node name="Label" type="RichTextLabel" parent="."]
visible = false
margin_right = 161.0
margin_bottom = 46.0
text = "/default/dir/test"
script = ExtResource( 8 )
[connection signal="button_up" from="MainMenu/PlayButton" to="MainMenu" method="_on_PlayButton_button_up"]
[connection signal="button_up" from="MainMenu/UpgradeMenuButton" to="MainMenu" method="_on_UpgradeMenuButton_button_up"]
[connection signal="button_up" from="MainMenu/SkinMenuButton" to="MainMenu" method="_on_SkinMenuButton_button_up"]
